# SiteSherpa

./: .gitignore  README.md  pyproject.toml
assets/: architecture.md
docs/: README.md
docs/lld/: lld.md
kb/sites/: aranya.gov.in.json  http_localhost_3000.json  webscraper.io.json
src/core/knowledgebase/: kb_core.py
src/core/scraper/: form_scraper.py  page_scraper.py  web_scraper.py
src/core/scraper/models/: form_schema.py  page_content.py
tests/: form.test.html  forms.test.py  scraper.test.py
